# contensis-management-api-python

./: .env.example  .gitignore  .pre-commit-config.yaml  .sourcery.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: release.yml  run-all-tests.yml
note_books/: api_client.ipynb  groups.ipynb  projects.ipynb  users.ipynb
src/contensis_management/: __init__.py  api_client.py  api_response.py  api_response_abc.py  logging_config.py  lower_key_dict.py  projects.py  request_handler.py  request_handler_abc.py
src/contensis_management/models/: __init__.py  camel_case.py  contensis_exception.py  group.py  message.py  page_options.py  paged_list.py  project.py  user.py
src/contensis_management/resource_handlers/: __init__.py  groups.py  projects.py  users.py
tests/: api_client_test.py  api_response_test.py  helper_config.py  lower_key_dict_test.py  request_handler_abc_test.py  request_handler_test.py
tests/helpers/: __init__.py  mock_api_response.py
tests/http/: get_groups.http  get_projects.http
tests/models/: __init__.py  page_list_test.py  page_options_test.py  project_test.py
tests/resource_handlers/: __init__.py  projects_test.py  users_test.py
